# ecommerce-micro-service

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: api-gateway-ci.yml  auth-ci.yml  inventory-ci.yml  lint.yml  notification-ci.yml  order-ci.yml  payment-ci.yml  product-catalog-ci.yml
dev/: run_all_containers.py  run_all_tests.py
frontend/: Dockerfile  docker-compose.yml  nginx.conf
frontend/public/: cancel.html  index.html  success.html
infrastructure/: docker-compose.yml
services/api_gateway/: .env  .gitignore  docker-compose.yml  pyproject.toml
services/api_gateway/app/: main.py
services/api_gateway/app/core/: config.py  jwt_middleware.py  route_wrapper.py  security.py
services/api_gateway/app/routes/: auth.py  inventory.py  notification.py  order.py  payment.py  product.py  reporting.py  users.py
services/auth/: docker-compose.yml  main.py  pyproject.toml
services/auth/alembic/: env.py
services/auth/alembic/versions/: 9505fd580151_create_users_table.py
services/auth/app/: kafka.py  main.py
services/auth/app/core/: config.py  security.py
services/auth/app/crud/: __init__.py  user.py
services/auth/app/models/: user.py
services/auth/app/repositories/: __init__.py  auth.py  user.py
services/auth/tests/: test_auth_endpoints.py
services/inventory/: docker-compose.yml  pyproject.toml
services/inventory/alembic/: env.py
services/inventory/app/: main.py
services/notification/: docker-compose.yml  pyproject.toml
services/notification/alembic/: env.py
services/notification/app/: main.py
services/order/: docker-compose.yml  pyproject.toml
services/order/alembic/: env.py
services/order/app/: kafka.py  main.py
services/payment/: docker-compose.yml  pyproject.toml
services/payment/alembic/: env.py
services/payment/alembic/versions/: ad242771a6e3_initial_payment_migration.py
services/payment/app/: main.py
services/payment/app/core/: config.py  database.py  stripe_provider.py
services/payment/app/models/: payment.py
services/payment/app/repositories/: __init__.py  payment.py
services/payment/app/routes/: payment.py
services/payment/app/schemas/: payment.py
services/payment/app/tests/: test_health.py
services/product-catalog/: .env  docker-compose.yml  pyproject.toml
services/product-catalog/alembic/: env.py
services/product-catalog/alembic/versions/: 614e560fd950_create_products_table.py
services/product-catalog/app/: kafka.py  kafka_producer.py  main.py
services/product-catalog/app/core/: config.py  database.py
services/product-catalog/app/models/: product.py
services/product-catalog/app/repositories/: product.py
services/product-catalog/app/routes/: product.py
services/product-catalog/app/schemas/: __init__.py  product.py
services/product-catalog/app/tests/: conftest.py  test_health.py  test_products_api.py
services/product-catalog/services/product-catalog/tests/: conftest.py
services/product-catalog/tests/: test_products_api.py
services/reporting/: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
services/reporting/alembic/: env.py
services/reporting/app/: main.py
(+51 files in other folders)
