[project]
name = "product-catalog"
version = "0.1.0"
description = ""
authors = [
    {name = "bgozlinski",email = "bartlomiej.gozlinski@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.122.0,<0.123.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "psycopg[binary] (>=3.2,<4.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "kafka-python (>=2.0.2,<3.0.0)",
]

[tool.poetry.group.dev.dependencies]
httpx = ">=0.27.0,<0.28.0"
bandit = "^1.9.3"
mypy = "^1.19.1"
ruff = "^0.15.0"
safety = "^3.7.0"

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.bandit]
exclude_dirs = ["app/tests", "alembic"]
skips = ["B101"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
